assets/css/style.css
html, body, #root {
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
}

body {
	background-color: black;
	overflow: hidden;
}



/*========= EFFECTS / ANIMATIONS =========*/

@keyframes ghost-text-shadow {
	0% {
		text-shadow: -1px -1px 4px black;
	}
	20% {
		text-shadow: 0.63px -1.96px 4px black;
	}
	40% {
		text-shadow: 2.4px -0.64px 4px black;
	}
	60% {
		text-shadow: 1.28px 2.11px 4px black;
	}
	80% {
		text-shadow: -1.55px 1.97px 4px black;
	}
	100% {
		text-shadow: -1px -1px 4px black;
	}
}

@keyframes ghost-drop-shadow {
	0% {
		filter: drop-shadow(-1px -1px 4px black);
	}
	20% {
		filter: drop-shadow(0.63px -1.96px 4px black);
	}
	40% {
		filter: drop-shadow(2.3px -0.64px 4px black);
	}
	60% {
		filter: drop-shadow(0.88px 2.11px 4px black);
	}
	80% {
		filter: drop-shadow(-1.55px 1.97px 4px black);
	}
	100% {
		filter: drop-shadow(-1px -1px 4px black);
	}
}

@keyframes ghost {
	0% {
		transform: translate(-4px, 3px);
	}
	10% {
		transform: translate(8px, 1px);
	}
	30% {
		transform: translate(-4px, -4px);
	}
	50% {
		transform: translate(4px, 8px);
	}
	60% {
		transform: translate(-2px, 8px);
	}
	70% {
		transform: translate(2px, 6px);
	}
	80% {
		transform: translate(-4px, -4px);
	}
	90% {
		transform: translate(-2px, 4px);
	}
	100% {
		transform: translate(-4px, 3px);
	}
}

@keyframes tv-noise {
	0% {
		transform: translateX(0px,0px);
	}
	10% {
		transform: translate(-100px, 100px);
	}
	20% {
		transform: translate(150px, -100px);
	}
	30% {
		transform: translate(-100px,100px);
	}
	40% {
		transform: translate(100px, -150px);
	}
	50% {
		transform: translate(-100px, 200px);
	}
	60% {
		transform: translate(-200px, -100px);
	}
	70% {
		transform: translateY(50px, 100px);
	}
	80% {
		transform: translate(100px, -150px);
	}
	90% {
		transform: translate(0px, 200px);
	}
	100% {
		transform: translate(-100px, 100px);
	}
}

@keyframes tv-turn-on {
	0% {
		transform: scale(0.001,0.0001) translate3d(0,0,0);
		-webkit-filter: brightness(400%);
		filter: brightness(400%);
	}
	40% {
		transform: scale(1.2,0.01) translate3d(0,0,0);
		-webkit-filter: brightness(350%);
		filter: brightness(350%);
	}
	60% {
		transform: scale(1.3,0.05) translate3d(0,0,0);
		-webkit-filter: brightness(250%);
		filter: brightness(250%);
	}
	80% {
		transform: scale(1,1.4) translate3d(0,0,0);
		-webkit-filter: brightness(200%);
		filter: brightness(200%);
		opacity: 1;
	}
	100% {
		transform: scale(1,1) translate3d(0,0,0);
		-webkit-filter: brightness(100%);
		filter: brightness(100%);
		opacity: 1;
	}
}

.tv-effects {
	position: absolute;
	overflow: hidden;
	left: 0;
	right: 0;
	top: 0;
	bottom: 0;
	pointer-events: none;
}

.tv-scanlines {
	position: absolute;
	z-index: 9998;
	left: 0;
	right: 0;
	top: 0;
	bottom: 0;
	opacity: 0.4;
	background-image: linear-gradient(#ccc 1px, transparent 1px);
	background-size: 20px 4px;
}

.tv-static-overlay {
	position: absolute;
	z-index: 9999;
	left: -500px;
	right: -500px;
	top: -500px;
	bottom: -500px;
	opacity: 0.6;
	background: transparent url(https://www.dropbox.com/s/h7ab1c82ctzy83n/noise.png?raw=1) 0 0;
	animation: tv-noise 1s steps(8,end) infinite both;
}

.desktop {
	animation: tv-turn-on 0.55s cubic-bezier(0.755, 0.050, 0.855, 0.060);
	animation-fill-mode: both;
	animation-delay: 0.6s;
}

.file .filename {
	animation: ghost-text-shadow 1.8s linear infinite;
}

.start-button {
	animation: ghost-text-shadow 1.8s linear infinite;
}

.start-button > .icon {
	animation: ghost-drop-shadow 1.8s linear infinite;
}

.ghost {
	opacity: 0.4;
	animation: ghost 12s ease-out infinite;
}

iframe.ghost {
	animation: ghost 12s linear infinite;
}



/*========= ICONS =========*/

.file {
	display: inline-block;
	position: absolute;
	
	width: 64px;

	font-family: sans-serif;
	font-size: 12px;

	color: white;
	text-align: center;

	cursor: pointer;
	user-select: none;
}

.file > .icon {
	display: inline-block;
	margin-left: auto;
	margin-right: auto;
	width: 50%;
	padding-top: 50%;

	background-repeat: no-repeat;
	background-position: top;
	background-size: contain;
}

.file > .filename {
	display: inline-block;

	max-width: 100%;
	overflow: hidden;
	text-overflow: ellipsis;
	overflow-wrap: normal;
}

.file:active {
	filter: brightness(.5) sepia(100%) hue-rotate(180deg) saturate(8);
}

.file:active > .filename {
	color: #b2fcff;
	background: #0080cb;

	outline-color: rgba(0,0,0,.8);
	outline-style: dotted;
	outline-width: 1px;
	outline-offset: -1px;
	
	max-width: none;
	overflow: initial;
	text-overflow: initial;
}

.file-txt > .icon {
	background-image: url(../images/windows95/icon-txt.png);
}



/*========= DESKTOP =========*/

.desktop {
	display: flex;
	flex-direction: column;
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
}

.icon-grid {
	flex-grow: 1;
}

.wallpaper-container {
	position: absolute;
	overflow: hidden;
	left: 0;
	right: 0;
	top: 0;
	bottom: 0;
	width: 100%;
	height: 100%;
	pointer-events: none;
}

.wallpaper {
	position: absolute;
	z-index: -1;
	width: 100%;
	height: 100%;
	background-position: center;
	background-size: cover;
	background-color: red;
	text-align: center;
}

@media (min-aspect-ratio: 640/360), (aspect-ratio: 640/360) {
	.wallpaper-container {
		display: flex;
		flex-direction: column;
		justify-content: center;
	}
	iframe.wallpaper {
		width: 100%;
		height: 800%;
	}
}

@media (max-aspect-ratio: 640/360) {
	.wallpaper-container {
		display: flex;
		flex-direction: row;
		justify-content: center;
	}
	iframe.wallpaper {
		height: 100%;
		width: 800%;
	}
}



/*========= TASKBAR =========*/

.taskbar {
	display: flex;
	flex-direction: row;
	align-content: center;
	height: 34px;
	background: linear-gradient(to bottom, #f1a4ff, #d834f9, #d847f2, #d847f2, #d847f2, #d834f9, #a42de2);
	filter: brightness(80%);
}

.start-button {
	position: relative;
	height: 100%;
	width: 6em;
	padding: 0;
	margin: 0;

	padding-left: 10px;

	font-weight: bold;
	font-size: 100%;
	color: white;
	text-shadow: 2px 2px 4px black;

	-webkit-mask-image: url(../masks/start-button-mask.png);
	-webkit-mask-mode: alpha;
	-webkit-mask-repeat: no-repeat;
	-webkit-mask-size: 100% 100%;

	mask-image: url(../masks/start-button-mask.png);
	mask-mode: alpha;
	mask-repeat: no-repeat;
	mask-size: 100% 100%;

	background: linear-gradient(to bottom, #91ee7e, #4ed62c, #51c539, #3ab334, #42962d, #269720, #3f9b20);
	border: 0px none transparent;
}

.start-button > .icon {
	position: absolute;
	top: 14%;
	left: 1px;
	height: 60%;
	width: 30px;

	background-image: url(../images/apple-icon.png);
	background-repeat: no-repeat;
	background-position: center;
	background-size: contain;

	filter: drop-shadow(1px 1px 1px black);
}

.start-button:active:hover {
	background: linear-gradient(to bottom, #4a913b, #428d2f, #3c942a, #349b2f, #42962d, #269720, #3f9b20);
}

.start-button:active:hover > .icon {
	opacity: 0.7;
}

.start-button:visited {
	outline: 0px none transparent;
}

